Update order API

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "concurrently \"nodemon\" \"npm run stripe\"",
+    "dev": "concurrently --kill-others-on-fail \"nodemon\" \"npm run stripe\"",
     "stripe": "stripe listen --forward-to localhost:5000/api/order/checkout/webhook",
     "build": "npm install && npx tsc",
     "start": "node dist/index.js"
